added exceptions and functionalitys

--- a/apresentacao.tex
+++ b/apresentacao.tex
@@ -126,15 +126,20 @@ Mostrar lista de camiões; adicionar, editar ou remover camiões; \\
 Mostrar lista de serviços; adicionar, editar ou remover um serviço;\\
 Login para clientes, gestores e condutores;\\
 Quando um condutor chega ao destino, tem de ter um contacto que pode, ou não, ser do cliente.\\
-Os gestores podem ver valores mensais de lucro de um camião específico, um tipo de camiões, ou totais;\\
+
 \end{frame}
 
 \begin{frame}
-AS VÁRIAS LISTAS E OPÇÕES DAS LISTAS (ORDENAÇÃO, FILTRAGEM,...)
+\frametitle{Lista de funcionalidades (cont.)} 
+Ordenar as diversas listas pelos respetivos argumentos;\\
+Filtrar as diversas listas pelos respetivos argumentos;\\
+Ver os valores mensais da empresa, tanto totais, como parciais (de um camião, ou de uma categoria de camiões);
 \end{frame}
 
 \begin{frame}
 \frametitle{Destaque de funcionalidade}
+ - falta completar
+
 \end{frame}
 
 \begin{frame}
