--- a/apresentacao.tex
+++ b/apresentacao.tex
@@ -100,13 +100,23 @@ Um só tipo de camiões (\texttt{Truck}), que pode carregar uma carga (\texttt{C
 	\item Perigoso (\texttt{Dangerous})
 \end{itemize}
 
-Todos os utilizadores podem ver e editar as suas informações pessoais.
-O cliente pode ver e editar os seus serviços ativos, ou requisitar um novo. 
-O condutor pode ver e editar os seus serviços ativos, bem como ver a lista de camiões disponíveis e as suas estatísticas mensais.
+Quando um serviço (\texttt{Service}) é criado, são automaticamente alocados os camiões e condutores necessários. 
 \end{frame}
 
 \begin{frame}
-\frametitle{Solução(cont.)}
+\frametitle{Permissões}
+Todos os utilizadores:
+\begin{itemize}
+	\item Visualizar e alterar os seus dados pessoais
+\end{itemize}
+
+Cliente:
+\begin{itemize}
+	\item Stuff	
+\end{itemize}
+
+O cliente pode ver e editar os seus serviços ativos, ou requisitar um novo. 
+O condutor pode ver e editar os seus serviços ativos, bem como ver a lista de camiões disponíveis e as suas estatísticas mensais.
 
 O gestor pode fazer tudo isto e ainda ver as listas de clientes e funcionários (completas ou filtradas por um argumento específico), com possibilidade de edição para qualquer um destes, além de poder ver os valores mensais de toda a empresa e outras estatísticas.\\
 Quando um cliente requisita um serviço, são atribuídos automaticamente condutores e camiões.
