--- a/apresentacao.tex
+++ b/apresentacao.tex
@@ -243,6 +243,10 @@ Distância
  
 \begin{frame}
 \frametitle{Exceções tratadas}
+\begin{tabular}{p{20mm} | p{40mm} p{40mm} }
+	
+\end{tabular}
+
 InvalidTimeFormat: chamada quando é introduzido uma hora com o formato errado;\\
 InvalidCredentials: chamada quando são introduzidas credenciais erradas (username ou password, durante o login);\\
 InvalidTemperatureRange: chamada quando é introduzida uma gama de temperatura não válida;\\
