deleted InvalidSchedule, given it was not used anywhere

--- a/apresentacao.tex
+++ b/apresentacao.tex
@@ -243,7 +243,9 @@ Distância
  
 \begin{frame}
 \frametitle{Exceções tratadas}
-\begin{tabular}{p{20mm} | p{40mm} p{40mm} }
+\begin{tabular}{p{35mm} | p{40mm} p{40mm} }
+	App::InvalidCredentials & & \\
+	App::RepeatedId & & \\
 	
 \end{tabular}
 
