--- a/apresentacao/apresentacao.tex
+++ b/apresentacao/apresentacao.tex
@@ -182,13 +182,13 @@ Codificar todos os caracteres exceto \texttt{[a-aA-Z0-9\_-.~]} com o seu código
 \begin{center}
 \begin{tabular}{p{60mm} p{0mm} p{40mm}}
 	\texttt{Person} & & \\	
-	\lstinputlisting[aboveskip=-1em, belowskip=-1em, firstline=6, lastline=7]{./codigo/data/services/services.txt} & &
+	\lstinputlisting[aboveskip=-1em, belowskip=-1em, firstline=6, lastline=7]{../codigo/data/services/services.txt} & &
 \begin{lstlisting}[aboveskip=-1em,belowskip=-1em]
 Nome
 Número de telemóvel
 \end{lstlisting} \\
 	\texttt{Client} & & \\
-	\lstinputlisting[aboveskip=-1em, belowskip=-1em, firstline=30,lastline=37]{./codigo/data/clients/clients.txt} & &
+	\lstinputlisting[aboveskip=-1em, belowskip=-1em, firstline=30,lastline=37]{../codigo/data/clients/clients.txt} & &
 \begin{lstlisting}[aboveskip=-1em,belowskip=-1em]
 Nome
 Número de telemóvel
@@ -200,7 +200,7 @@ Região/País
 NIF
 \end{lstlisting} \\
 	\texttt{Driver/Manager} & & \\
-	\lstinputlisting[aboveskip=-1em, belowskip=-1em, firstline=3,lastline=11]{./codigo/data/managers/managers.txt} & &
+	\lstinputlisting[aboveskip=-1em, belowskip=-1em, firstline=3,lastline=11]{../codigo/data/managers/managers.txt} & &
 \begin{lstlisting}[aboveskip=-1em,belowskip=-1em]
 Nome
 Número de telemóvel
@@ -220,7 +220,7 @@ Salário base
 \begin{center}
 \begin{tabular}{p{60mm} p{0mm} p{40mm}}
 	\texttt{Person} & & \\	
-	\lstinputlisting[firstline=1,lastline=25]{./codigo/data/services/services.txt} & &
+	\lstinputlisting[firstline=1,lastline=25]{../codigo/data/services/services.txt} & &
 \begin{lstlisting}
 ID do próx. serviço a adicionar
 Número de serviços
@@ -269,8 +269,8 @@ Distância
 \begin{frame}
 \frametitle{Exemplo de exceção: \texttt{utils::string\_regex::FailedRegex}}
 \begin{center} \begin{minipage}{0.95\linewidth}
-\lstinputlisting[language=C++, caption={utils.h, L239-254}, firstline=239, lastline=254]{./codigo/include/utils.h}
-\lstinputlisting[language=C++, caption={utils.cpp, L129-134}, firstline=129, lastline=134]{./codigo/src/utils.cpp}
+\lstinputlisting[language=C++, caption={utils.h, L239-254}, firstline=239, lastline=254]{../codigo/include/utils.h}
+\lstinputlisting[language=C++, caption={utils.cpp, L129-134}, firstline=129, lastline=134]{../codigo/src/utils.cpp}
 \end{minipage} \end{center}
 \end{frame}
 
