--- a/apresentacao/apresentacao.tex
+++ b/apresentacao/apresentacao.tex
@@ -56,6 +56,9 @@
 \usepackage[style=british]{csquotes}
 
 \usepackage{tabularx}
+
+\usepackage{graphicx}
+	\graphicspath{{./images/}}
  
 %Information to be included in the title page:
 \AtBeginDocument{
@@ -148,6 +151,26 @@ Quando um serviço (\texttt{Service}) é criado, são automaticamente alocados o
 
 - diagrama de classes
 - diagrama de classes
+\end{frame}
+
+\begin{frame}
+\frametitle{Diagrama de classes Cargo e Truck}
+\begin{center} \includegraphics[scale=0.36]{{Cargo_Truck_class_diagram}} \end{center}
+\end{frame}
+
+\begin{frame}
+\frametitle{Diagrama de classes Person}
+\begin{center} \includegraphics[scale=0.35]{{Person_class_diagram}} \end{center}
+\end{frame}
+
+\begin{frame}
+\frametitle{Diagrama de classes Service}
+\begin{center} \includegraphics[scale=0.37]{{Service_class_diagram}} \end{center}
+\end{frame}
+
+\begin{frame}
+\frametitle{Diagrama de classes utils::string\_regex}
+\begin{center} \includegraphics[scale=0.40]{{string_regex_class_diagram}} \end{center}
 \end{frame}
 
 \begin{frame}
