--- a/apresentacao/apresentacao.tex
+++ b/apresentacao/apresentacao.tex
@@ -58,7 +58,7 @@
 \usepackage{tabularx}
 
 \usepackage{graphicx}
-	\graphicspath{{./images/}}
+	\graphicspath{{./images/}{../documentacao/}}
  
 %Information to be included in the title page:
 \AtBeginDocument{
@@ -146,11 +146,18 @@ Quando um serviço (\texttt{Service}) é criado, são automaticamente alocados o
 \end{frame}
 
 \begin{frame}
-\frametitle{Diagrama de classes}
-
-
-- diagrama de classes
-- diagrama de classes
+\frametitle{Diagrama de herança}
+\begin{center}
+\centering
+$\vcenter{\hbox{\includegraphics[scale=0.3]{{inherit_graph_2}}}}$ \hspace*{12px}
+$\vcenter{\hbox{\includegraphics[scale=0.3]{{classCargo__inherit__graph}}}}$
+\end{center}
+\begin{center}
+\centering
+$\vcenter{\hbox{\includegraphics[scale=0.3]{{classPerson__inherit__graph}}}}$\hspace*{12px}
+$\vcenter{\hbox{\includegraphics[scale=0.3]{{inherit_graph_13}}}}$\hspace*{12px}
+$\vcenter{\hbox{\includegraphics[scale=0.3]{{classutils_1_1string__regex__inherit__graph}}}}$
+\end{center}
 \end{frame}
 
 \begin{frame}
