--- a/apresentacao/apresentacao.tex
+++ b/apresentacao/apresentacao.tex
@@ -305,25 +305,30 @@ Distância
 \end{frame}
 
 \begin{frame}
-\frametitle{Lista de funcionalidades} 
-O gestor pode fazer tudo isto e ainda ver as listas de clientes e funcionários (completas ou filtradas por um argumento específico),
-
-
-
-Os clientes podem requisitar serviços, com origem, destino, duração da viagem, ...\\
-Mostrar lista de clientes e funcionários; adicionar, editar ou remover clientes e funcionários;\\
-Mostrar lista de camiões; adicionar, editar ou remover camiões; \\
-Mostrar lista de serviços; adicionar, editar ou remover um serviço;\\
-Login para clientes, gestores e condutores;\\
-Quando um condutor chega ao destino, tem de ter um contacto que pode, ou não, ser do cliente.\\
-
-\end{frame}
-
-\begin{frame}
-\frametitle{Lista de funcionalidades (cont.)} 
-Ordenar as diversas listas pelos respetivos argumentos;\\
-Filtrar as diversas listas pelos respetivos argumentos;\\
-Ver os valores mensais da empresa, tanto totais, como parciais (de um camião, ou de uma categoria de camiões);
+\frametitle{Lista de funcionalidades}
+\textbf{Tabelas}
+\begin{itemize}
+	\item Visualizar tabelas detalhadas das entidades
+	\item Ordenar e pesquisar elementos da tabela por uma das várias propriedades
+	\item Ordenações e pesquisas sucessivas
+	\item Na tabela de serviços:
+	\begin{itemize}
+		\item Visualizar serviços entre dois dias
+		\item Visualizar custos e despesas, para cada serviço e no total da tabela
+	\end{itemize} 
+\end{itemize}
+\textbf{CRUD}
+\begin{itemize}
+	\item Criar, ler, editar e eliminar:
+	\begin{itemize}
+		\item Clientes
+		\item Condutores
+		\item Gestores
+	\end{itemize}
+	\item Criar, ler e eliminar serviços
+\end{itemize}
+\textbf{Login}
+Sistema de login com nome de utilizador (\texttt{Username}) e palavra-passe (\texttt{Password}) para clientes, condutores e gestores.
 \end{frame}
 
 \begin{frame}
