--- a/apresentacao/apresentacao.tex
+++ b/apresentacao/apresentacao.tex
@@ -333,14 +333,13 @@ Sistema de login com nome de utilizador (\texttt{Username}) e palavra-passe (\te
 
 \begin{frame}
 \frametitle{Destaque de funcionalidade}
- - falta completar
-
 \end{frame}
 
 \begin{frame}
 \frametitle{Dificuldades}
 Trabalho de grupo = colaboração + trabalho individual\\
-Neste trabalho as classes estavam muito interligadas umas com as outras e com a estrutura da aplicação, pelo que foi dificil compartimentar tarefas e classes/funções
+Neste trabalho as classes estavam muito interligadas umas com as outras e com a estrutura da aplicação, pelo que foi dificil compartimentar tarefas e classes/funções\\
+Gerir o tempo na aplicação? Pagar salários no início do mês? complicado...
 \end{frame}
 
 \begin{frame}
